Add service control middleware
